# volant

./: .coveragerc  .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  REUSE.toml  justfile  mypy.ini  pyproject.toml  ruff.toml
.zed/: settings.json
LICENSES/: MIT.txt
src/volant/: __init__.py
tests/: test_volant.py  test_vs.py
