[project]
name = "vs"
version = "0.0.1"
description = "Volant Script"
readme = "README.md"
authors = [
  { name = "Serban Giuroiu", email = "giuroiu@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.11.13",
]

[build-system]
requires = ["uv_build>=0.7.11,<0.8"]
build-backend = "uv_build"
