[project]
name = "volant"
version = "0.0.1"
description = "Volant Script"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Serban Giuroiu", email = "giuroiu@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
repository = "https://github.com/serban/volant"
changelog = "https://github.com/serban/volant/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
  "basedpyright>=1.29.2",
  "coverage>=7.8.2",
  "mypy>=1.16.0",
  "pdoc>=15.0.4",
  "pyrefly>=0.18.1",
  "ruff>=0.11.13",
  "ty>=0.0.1a8",
]

[build-system]
requires = ["uv_build>=0.7.11,<0.8"]
build-backend = "uv_build"
